# dist/api.yml
@@ -86,7 +86,41 @@ paths:
                   $ref: "#/components/schemas/Leauge"
         "400":
           description: wrong input parameters
-  /game/{gameId}:
+
+
+  /game/allGames/:
+    get:
+      tags:
+        - Games
+      summary: return all the games in the season 
+      responses:
+        "200":
+          description: match
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Game"
+        "400":
+          description: something went wrong
+
+  /game/getClosestGame:
+    get:
+      tags:
+        - Games
+      summary: returns the colset game in the leauge
+      responses:
+        "200":
+          description: match
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Game"
+        "400":
+          description: something went wrong
+
+  /game/getDetails/{gameId}:
     get:
       tags:
         - Games
@@ -319,6 +353,39 @@ paths:
 
         "400":
           description: Bad Request.
+
+  /coach/coachDetailByName/{coach_name}/filterbyTeam/{teamName}:
+    get:
+      tags:
+        - Coachs
+      summary: Search player by name
+      parameters:
+        - name: coach_name
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+          example: J
+        - name: teamName
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+          example: Horsens
+      responses:
+        "200":
+          description: data of specific player
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Player"
+        "400":
+          description: Bad Request.
+          
   /player/playerFullDetails/{playerId}:
     get:
       tags:
@@ -345,7 +412,7 @@ paths:
         "204":
           description: Bad, No Content was found.
         "400":
-          description: Bad Request.
+          description: Bad Request.      
     # put:
     #   tags:
     #   - Players
@@ -389,6 +456,72 @@ paths:
                 $ref: "#/components/schemas/Player"
         "400":
           description: Bad Request.
+
+
+  /player/SearchPlayerByName/{playerName}/filterbyTeam/{teamName}:
+    get:
+      tags:
+        - Players
+      summary: Search player by name
+      parameters:
+        - name: playerName
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+          example: jesper
+        - name: teamName
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+          example: Lyngby
+      responses:
+        "200":
+          description: data of specific player
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Player"
+        "400":
+          description: Bad Request.
+
+  /player/SearchPlayerByName/{playerName}/filterbyPosition/{position}:
+    get:
+      tags:
+        - Players
+      summary: Search player by name
+      parameters:
+        - name: playerName
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+          example: jesper
+        - name: position
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+          example: 3
+      responses:
+        "200":
+          description: data of specific player
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Player"
+        "400":
+          description: Bad Request.
+# /SearchPlayerByName/:playername/filterbyTeam/:teamName
 
   /teams/teamFullDetails/{teamId}:
     get:
@@ -579,6 +712,37 @@ paths:
           description: success
         "400":
           description: somting went wrong  
+
+  # /search/filter/{gameId}:
+  #   delete:
+  #     tags:
+  #       - Personal Page match
+  #     summary: Delete a game from the user's favorite game list
+  #     parameters:
+  #       - name: gameId
+  #         in: path
+  #         required: true
+
+  #     responses:
+  #       "200":
+  #         description: success
+  #       "400":
+  #         description: Bad Request.
+    # put:
+    #   tags:
+    #     - Personal Page match
+    #   summary: add a match to the user's favorites
+    #   parameters:
+    #   - name: gameId
+    #     in: path
+    #     required: true
+    #   responses:
+    #     "200":
+    #       description: success
+    #     "400":
+    #       description: somting went wrong 
+
+
 components:
   schemas:
     User:
