# project/routes/teams.js
@@ -3,9 +3,10 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const players_utils = require("./utils/players_utils");
 const teams_utils = require("./utils/teams_utils");
+const games_utils = require("./utils/games_utils");
 
 router.get("/teamFullDetails/:teamId", async (req, res, next) => {
-  let team_details = [];
+  // let team_details = [];
   try {
     const players_details = await players_utils.getPlayersByTeam(
       req.params.teamId
@@ -13,9 +14,14 @@ router.get("/teamFullDetails/:teamId", async (req, res, next) => {
     const team_stats = await teams_utils.getTeamDetailsbyID(
       req.params.teamId
     );
-    // we should keep implementing team page.....
-    team_details.push(team_stats,players_details);
-    res.send(team_details);
+    const game_stats = await games_utils.returnGamesByTeamID(
+      req.params.teamId
+      );
+
+    team_stats.players = players_details;
+    team_stats.games = game_stats;
+    // team_details.push(team_stats,players_details);
+    res.send(team_stats);
   } catch (error) {
     next(error);
   }
